# wmlj

./: AUTHORS  ChangeLog  Makefile.am  README  TODO  bootstrap  configure.in  wmlj.1
pixmaps/: logo.xpm  logo1.xpm  logo2.xpm  logo_bw.xpm
src/: Makefile.am  about.c  about.h  dlg.c  dlg.h  foodock.c  foodock.h  md5.c  menu.c  menu.h  network.c  network.h  rc.c  rc.h  settings.c  settings.h  spawn.c  spawn.h  wmlj.c  wmlj.h
